--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,29 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-color: #34495E;
 }
 
 .container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     border-style: solid;
+    border-width: 8px;
     width: 400px;
     height: 400px;
+    background-color: #EAECEE;
+    gap: 1px;
+    border-radius: 15px;
 }
 
 .number {
+    background-color: #D6EAF8;
+    border-radius: 5px;
+}
 
+.operator, #clear, #equals {
+    background-color: #F8C471;
+    border-radius: 5px;
 }
 
 #display {
@@ -23,5 +34,8 @@
     flex-direction: column;
     align-items: flex-end;
     grid-column: 1 / -1;
-    
+}
+
+#equals {
+    grid-column: span 2;
 }
