--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,8 @@
     flex-direction: column;
     align-items: flex-end;
     grid-column: 1 / -1;
+    padding-top: 8px;
+    padding-right: 8px;
 }
 
 #equals {
